tests/ui/codemap_tests/tab_2.stderr
error[E0765]: unterminated double quote string
  --> $DIR/tab_2.rs:4:7
   |
LL |                   """;
   |  ___________________^
LL | | }
<<<<<<< HEAD
LL | |
LL | | // ferrocene-annotations: fls_boyhlu5srp6u
LL | | // String Literals
   | |___________________^
=======
   | |_^
>>>>>>> pull-upstream-temp--do-not-use-for-real-code

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0765`.
