tests/ui/codemap_tests/tab_2.rs
// ignore-tidy-tab

fn main() {
				"""; //~ ERROR unterminated double quote
}

// ferrocene-annotations: fls_boyhlu5srp6u
// String Literals
